--- a/26/index.html
+++ b/26/index.html
@@ -6,7 +6,7 @@
     <title>Задание 26</title>
 </head>
     <script>
-        var hello = "Привет"
+        var hello = "Привет";
         console.log(hello);
     </script>
     <script src="script.js"></script>
