--- a/46/index.html
+++ b/46/index.html
@@ -7,11 +7,16 @@
 </head>
 <body>
     <script>
+        // Получаем строку поиска от пользователя через prompt
         const search = prompt('Поиск');
 
+        // Массив слов для поиска
         const words = ['День','Том','Гость','Выборы','Солнце','Ход','Речь','Смена','Бизнес','Качество','Республика','Сердце','Администрация','Поезд','Работник','Ресурс','Часть','Изучение','Бок','Понимание','Животное','Утро','Правда','Личность','Звонок','Урок','Командир','Американец','Заседание','Образ'];
 
-        const result = words.filter(word => word.toLowerCase().includes(search.toLowerCase())).join(', ');
+        // Фильтрация массива по вхождению подстроки, приведение к нижнему регистру
+        const result = words
+            .filter(word => word.toLowerCase().includes(search.toLowerCase())) // Отфильтровываем слова
+            .join(', '); // Объединяем отфильтрованные слова в строку через запятую с пробелом
 
         console.log(result);
     </script>
